--- a/TP2/Informe/resultados.tex
+++ b/TP2/Informe/resultados.tex
@@ -46,9 +46,14 @@ Enlace 	 &	Distancia en Km 	& 	RTT mínimo en ms	\\ \hline
 \caption{Traceroute a perfil.com.ar} \label{figura1}
 \end{figure}
 
+En este caso al hacer un traceroute desde una dirección IP en Argentina a perfil.com.ar, un sitio web hosteado en Argentina, observamos que el tráfico primero se dirige a los Estados Unidos y luego vuelve al país para acceder al sitio.
+
 \begin{figure}[H]
 \begin{center}
 \includegraphics[width=17cm]{newzealand.png}
 \end{center}
 \caption{Traceroute a newzealand.govt.nz} \label{figura1}
 \end{figure}
+
+Realizamos un traceroute a una página web en Nueva Zelanda y obtuvimos que los paquetes se dirigieron primero a Estados Unidos, luego a Asia, de ahí vuelven a Norte América para dirigirse a España. Finalmente vuelven a Estados Unidos para ser enviados a Nueva Zelanda.	\\
+\indent	Al intentar reproducir los resultados días más tarde no obtuvimos los mismos resultados, en una ocasión iba directo desde Estados Unidos y en otras fue a través de Asia.
