--- a/TP2/Informe/resultados.tex
+++ b/TP2/Informe/resultados.tex
@@ -2,6 +2,8 @@
 
 \subsection{Enlaces transatlánticos}
 
+%~ http://maps.googleapis.com/maps/api/staticmap?zoom=1&size=600x400&scale=2&sensor=false&maptype=roadmap&markers=label:1|37.9283,-122.0566&markers=label:2|-35.28,149.22&path=color:0xff0000|weight:2|37.9283,-122.0566|-35.28,149.22
+
 %~ \begin{figure}[!hbp]
 \begin{figure}[H]
 \begin{center}
@@ -10,21 +12,34 @@
 \caption{Enlaces transatlánticos} \label{figura1}
 \end{figure}
 
+%~ shonenjump.com
+%~ iceland.edu
+%~ sansebastian2016.eu	213.195.72.196
+
+%~ 34.05223, -118.24368
+%~ 39.9075, 116.39723
+
 \noindent \begin{center} \begin{tabular}{| c | c | c | c | c |} \hline 
 Pin 	 & 	 Dirección IP 	 & 	 Coordenadas 	 & 	 Distancia total recorrida hasta él en Km 	 & 	 RTT mínimo en ms \\ \hline 
 1 	 & 	 89.221.35.141 	 & 	 (37.9283,-122.0566) 	 & 	 11179.8250554 	 & 	 55.9 \\ \hline 
-2 	 & 	 202.158.194.173 	 & 	 (-27.0,133.0) 	 & 	 24234.7289268 	 & 	 121.17 \\ \hline 
-3 	 & 	 195.22.199.109 	 & 	 (25.7743,-80.1937) 	 & 	 7887.31191972 	 & 	 39.44 \\ \hline 
-4 	 & 	 195.2.6.169 	 & 	 (47.0,8.0) 	 & 	 15702.4500297 	 & 	 78.51 \\ \hline 
-5 	 & 	 89.221.40.131 	 & 	 (32.7831,-96.8067) 	 & 	 9285.34331745 	 & 	 46.43 \\ \hline 
-6 	 & 	 219.158.33.189 	 & 	 (35.0,105.0) 	 & 	 21427.6048813 	 & 	 107.14 \\ \hline 
+2 	 & 	 202.158.194.173 	 & 	 (-35.28,149.22) 	 & 	 24234.7289268 	 & 	 121.17 \\ \hline 
+3 	 & 	  	 & 	  	 & 	  	 & 	  \\ \hline 
+4 	 & 	  	 & 	  	 & 	  	 & 	  \\ \hline 
+5 	 & 	  	 & 	  	 & 	  	 & 	  \\ \hline 
+6 	 & 	  	 & 	  	 & 	  	 & 	  \\ \hline 
+%~ 3 	 & 	 195.22.199.109 	 & 	 (25.7743,-80.1937) 	 & 	 7887.31191972 	 & 	 39.44 \\ \hline 
+%~ 4 	 & 	 195.2.6.169 	 & 	 (47.0,8.0) 	 & 	 15702.4500297 	 & 	 78.51 \\ \hline 
+%~ 5 	 & 	 89.221.40.131 	 & 	 (32.7831,-96.8067) 	 & 	 9285.34331745 	 & 	 46.43 \\ \hline 
+%~ 6 	 & 	 219.158.33.189 	 & 	 (35.0,105.0) 	 & 	 21427.6048813 	 & 	 107.14 \\ \hline 
 \end{tabular} \end{center}
 
 \noindent \begin{center} \begin{tabular}{| c | c | c | c | c |} \hline 
 Enlace 	 &	Distancia en Km 	& 	RTT mínimo en ms	\\ \hline 
-1 - 2	 &	13054.90 	 		& 	65.27				\\ \hline 
-3 - 4 	 & 	7815.13	 			& 	39.07				\\ \hline 
-5 - 6 	 & 	12142.26 			&	60.71				\\ \hline 
+1 - 2	 &	12222	 	 		& 	61.11				\\ \hline 
+3 - 4 	 & 		 				& 					\\ \hline 
+5 - 6 	 & 			 			&					\\ \hline 
+%~ 3 - 4 	 & 	7815.13	 			& 	39.07				\\ \hline 
+%~ 5 - 6 	 & 	12142.26 			&	60.71				\\ \hline 
 \end{tabular} \end{center}
 
 \subsection{Variación del RTT a lo largo del día}
