--- a/TP2/Informe/conclusiones.tex
+++ b/TP2/Informe/conclusiones.tex
@@ -1,2 +1,10 @@
 \section{Conclusiones}
 
+
+A pesar de haber intentando encontrar enlaces transatlánticos reales tales como son mostrados en \textbf{submarinecablemap.com} y \textbf{cablemap.info} no pudimos lograrlo. A continuación enumeramos posibles motivos por lo cual el experimento no resulto exitoso y nuestras conclusiones:
+\begin{enumerate}
+\item	Desde las conexiones a internet desde las que pudimos experimentar (con telecentro como ISP), para ir a cualquier host situado al otro lado del oceano Atlántico, nuestro tráfico debe ir primero a los Estados Unidos y desde allí o bien se dirige a Europa o se dirige hacia el Pacífico. Como los enlaces deben ser transatlánticos, debimos descartar los enlaces que atraviesan el oceano Pacífico.
+\item	Con los enlaces obtenidos entre Estados Unidos y Europa (la ultima y la primera ip antes y después de cruzar el oceano, respectivamente), utilizamos los servicios de geolocalización de direcciones IP ofrecidos gratuitamente en internet. En ningún caso ambas posiciones coincidieron, aproximadamente, con las posiciones de un enlace real. O bien el extremo en Estados Unidos o el extremo en Europa o ambos no coincidían con el de un enlace real. Suponiendo que las direcciones ip obtenidas son efectivamente las de los enlaces, esto podría deberse a la precisión de los servicios de geolocalización.
+\item	Después de experimentar con direcciones al azar sin éxito, decidimos probar haciendo traceroute a páginas web hosteadas en ciudades cercanas a enlaces transatlánticos o en la misma ciudad que el enlace, de acuerdo a las direcciones y coordenadas obtenidas, observamos que el tráfico no necesariamente se dirige por alguno de los enlaces más cercanos al destino. Por ejemplo para llegar a un sitio web en Francia con un enlace cercano, la ruta puede cruzar desde Estados Unidos a un enlace en el sur de España o del Reino Unido.
+\item	Teniendo en cuenta la importancia de los enlaces, y posiblemente también la sensitividad de las direcciónes ip asignadas a los extremos de los mismos, es posible que se utilizen tuneles para evitar revelar esta información de los enlaces y que de esta forma la información obtenida no coincida con la real en su totalidad.
+\end{enumerate}
