--- a/TP2/Informe/analisis.tex
+++ b/TP2/Informe/analisis.tex
@@ -1,5 +1,7 @@
 \section{Análisis de resultados}
 
+Si bien en submarinecablemap.com se ve una gran cantidad de enlaces que cruzan el atl'antico, notamos que s'olo un par son los utilizados para llegar del otro lado del oc'eano. Suponemos que 'esto puede estar relacionado con los ISPs utilizados (telecentro, fibertel). Incluso en pruebas que trataron de forzar el uso de los enlaces que van a Africa desde Brasil, el resultado inclu'ia un enlace USA - Londres. Esto tambi'en puede indicar que estos enlaces sean de mayor velocidad que los anteriores, por lo que son los elegidos para llegar a destino.
+
 Como se puede ver en la figura 2 \ref{figura2}, a lo largo del día en todos los enlaces el RTT hacia el extremo del enlace en los Estados Unidos es menor al del RTT hacia el extremo del enlace perteneciente a Europa, lo que se corresponde con que ambos pertenezcan al mismo enlace.	\\
 A su vez podemos observar que la diferencia entre los RTTs es considerablemente superior al RTT mínimo esperado, por lo que podemos suponer que gran parte de la diferencia entre los RTTs de los extremos del enlace y el RTT mínimo esperado, sea el tiempo de ser despachado de un extremo al otro, es decir:	\\
 \begin{displaymath}
