--- a/TP2/Informe/resultados.tex
+++ b/TP2/Informe/resultados.tex
@@ -15,8 +15,10 @@ Aclaraciones:	\\
 %~ 	&markers=label:1|25.77427,-80.19366
 %~ 	&markers=label:2|51.50853,-0.12574
 %~ 	&markers=label:3|40.71427,-74.00597
+%~ 	&markers=label:5|(38.71667,-9.13333
 %~ 	&path=color:0xff0000|weight:2|25.77427,-80.19366|51.50853,-0.12574
 %~ 	&path=color:0xff0000|weight:2|40.71427,-74.00597|51.50853,-0.12574
+%~ 	&path=color:0xff0000|weight:2|25.77427,-80.19366|38.71667,-9.13333
 
 \begin{figure}[H]
 \begin{center}
@@ -33,8 +35,8 @@ Pin 	& 	 Dirección IP 	 & 	 Coordenadas 		 & 	 Distancia total recorrida hasta 
 2 		& 	141.136.107.41 & (51.50853,-0.12574)	 & 	 			11130			 & 	 		55.65			\\ \hline 
 3 	 	& 	94.142.122.217 & (40.71427,-74.00597)	 & 	  		8527			 & 	 		42.635			\\ \hline 
 4 	 	& 	84.16.12.21		 & (51.50853,-0.12574)	 & 	  		11130			 & 	  	55.65				\\ \hline 
-5 	 	& 	  				 & 	  					 & 	  											 & 	  					\\ \hline 
-6 	 	& 	  				 & 	 				 	 & 	  											 & 	  					\\ \hline 
+5 	 	& 	66.110.9.61		 & 	(25.77427,-80.19366) & 	 12224.18		 & 	61.12  					\\ \hline 
+6 	 	& 	80.231.158.42	 & (38.71667,-9.13333)	 & 	 17491.59	 & 	87.45		\\ \hline 
 %~ 3 	 & 	 195.22.199.109 	 & 	 (25.7743,-80.1937) 	 & 	 7887.31191972 	 & 	 39.44 \\ \hline 
 %~ 4 	 & 	 195.2.6.169 	 & 	 (47.0,8.0) 	 & 	 15702.4500297 	 & 	 78.51 \\ \hline 
 %~ 5 	 & 	 89.221.40.131 	 & 	 (32.7831,-96.8067) 	 & 	 9285.34331745 	 & 	 46.43 \\ \hline 
@@ -46,7 +48,7 @@ Pin 	& 	 Dirección IP 	 & 	 Coordenadas 		 & 	 Distancia total recorrida hasta 
 Enlace 	 &	Distancia en Km 	& 	RTT mínimo en ms	\\ \hline 
 1 - 2	 &			7126 	 		& 		35.63			\\ \hline 
 3 - 4 	 & 		5570 			&   	27.85			\\ \hline 
-5 - 6 	 & 			 			&						\\ \hline 
+5 - 6 	 & 		6671 			&	33.35					\\ \hline 
 \end{tabular} \end{center}
 
 \subsection{Variación del RTT a lo largo del día}
