abstract y mas conclusiones

--- a/TP2/Informe/abstract.tex
+++ b/TP2/Informe/abstract.tex
@@ -1,6 +1,11 @@
 \section*{\centering Abstract}
 
 {\em
-Hacer abstract
+En este taller experimentamos con herramientas y t'ecnicas frecuentes a nivel de red. En la primera parte desarrollamos nuestras propias implementaciones de ping y traceroute.
+En la segunda parte utilizamos dichas implementaciones para encontrar enlaces transatl'anticos. Se calcul'o la distancia lineal de dichos enlaces
+y se analiz'o el RTT real en distintos momentos del d'ia. Se encontraron dificultades para encontrar los enlaces solicitados, las que se atribuyen a diferentes posibles razones, 
+como la existencia de t'uneles que ocultan los verdaderos enlaces, restricciones de ruteo de los ISPs utilizados, falta de precisi'on de los
+servicios de geolocalizaci'on. Con respecto a la variaci'on del RTT a lo largo del d'ia, si bien se observa una cierta estabilidad en su mayor'ia, 
+se ven algunos picos de mayor RTT, lo que estar'ia relacionado con horarios pico de uso del enlace.
 }
 
