--- a/TP2/Informe/conclusiones.tex
+++ b/TP2/Informe/conclusiones.tex
@@ -8,3 +8,7 @@ A pesar de haber intentando encontrar enlaces transatlánticos reales tales como
 \item	Después de experimentar con direcciones al azar sin éxito, decidimos probar haciendo traceroute a páginas web hosteadas en ciudades cercanas a enlaces transatlánticos o en la misma ciudad que el enlace, de acuerdo a las direcciones y coordenadas obtenidas, observamos que el tráfico no necesariamente se dirige por alguno de los enlaces más cercanos al destino. Por ejemplo para llegar a un sitio web en Francia con un enlace cercano, la ruta puede cruzar desde Estados Unidos a un enlace en el sur de España o del Reino Unido.
 \item	Teniendo en cuenta la importancia de los enlaces, y posiblemente también la sensitividad de las direcciónes ip asignadas a los extremos de los mismos, es posible que se utilizen tuneles para evitar revelar esta información de los enlaces y que de esta forma la información obtenida no coincida con la real en su totalidad.
 \end{enumerate}
+
+Con respecto a los resultados de RTT a lo largo del d'ia, se ve que hay cierta estabilidad en los valores obtenidos, con la excepci'on de algunos 
+picos de mayor tiempo de respuesta. Por ejemplo, en la figura 2, el enlace 2 presenta un pico a las 19hs y el enlace 6 presenta uno a las 9hs y otro a
+las 19hs. Estos puntos de mayor RTT suponemos que identifican franjas horarias de mayor uso del enlace.
