--- a/TP3/Informe/resultados.tex
+++ b/TP3/Informe/resultados.tex
@@ -1,1 +1,32 @@
 \section{Resultados}
+
+
+\begin{figure}[H]
+\begin{center}
+\includegraphics[width=\textwidth,keepaspectratio]{tiempos.png}
+\end{center}
+\caption{Tiempo total de transmición (ventana de emisión fija en 10)} \label{figura1}
+\end{figure}
+
+
+\begin{figure}[H]
+\begin{center}
+\includegraphics[width=\textwidth,keepaspectratio]{retransmiciones.png}
+\end{center}
+\caption{Cantidad de retransmiciones (ventana de emisión fija en 10)} \label{figura2}
+\end{figure}
+
+
+\begin{figure}[H]
+\begin{center}
+\includegraphics[width=\textwidth,keepaspectratio]{tiempos50.png}
+\end{center}
+\caption{Tiempo total de transmición de un archivo de 50KB} \label{figura3}
+\end{figure}
+
+\begin{figure}[H]
+\begin{center}
+\includegraphics[width=\textwidth,keepaspectratio]{timeouts-retransmiciones50.png}
+\end{center}
+\caption{Timeouts y retransmiciones de un archivo de 50KB} \label{figura4}
+\end{figure}
