--- a/TP3/Informe/resultados.tex
+++ b/TP3/Informe/resultados.tex
@@ -1,6 +1,5 @@
 \section{Resultados}
 
-
 \begin{figure}[H]
 \begin{center}
 \includegraphics[width=\textwidth,keepaspectratio]{tiempos.png}
@@ -21,12 +20,19 @@
 \begin{center}
 \includegraphics[width=\textwidth,keepaspectratio]{tiempos50.png}
 \end{center}
-\caption{Tiempo total de transmición de un archivo de 50KB} \label{figura3}
+\caption{Tiempo total de transmición (tamaño de archivo fijo de 50KB)} \label{figura3}
 \end{figure}
 
 \begin{figure}[H]
 \begin{center}
-\includegraphics[width=\textwidth,keepaspectratio]{timeouts-retransmiciones50.png}
+\includegraphics[width=\textwidth,keepaspectratio]{retransmiciones50.png}
 \end{center}
-\caption{Timeouts y retransmiciones de un archivo de 50KB} \label{figura4}
+\caption{Cantidad de retransmiciones (tamaño de archivo fijo de 50KB)} \label{figura4}
+\end{figure}
+
+\begin{figure}[H]
+\begin{center}
+\includegraphics[width=\textwidth,keepaspectratio]{porcentajetimeouts50.png}
+\end{center}
+\caption{Porcentaje de timeouts por muchas retransmiciones (tamaño de archivo fijo de 50KB)} \label{figura5}
 \end{figure}
